Source/WebCore/platform/graphics/ColorSerialization.cpp
@@ -27,6 +27,7 @@
 #include "ColorSerialization.h"
 
 #include "Color.h"
+#include "ColorNormalization.h"
 #include <wtf/Assertions.h>
 #include <wtf/HexNumber.h>
 #include <wtf/MathExtras.h>
@@ -237,16 +238,31 @@ static String serializationUsingColorFunction(const SRGBA<uint8_t>& color)
     return serializationUsingColorFunction(convertColor<SRGBA<float>>(color));
 }
 
-template<typename ColorType> static String serializationOfLabFamilyForCSS(const ColorType& color)
+template<typename ColorType> static String serializationOfLabLikeColorsForCSS(const ColorType& color)
 {
     static_assert(std::is_same_v<typename ColorType::ComponentType, float>);
 
-     // https://www.w3.org/TR/css-color-4/#serializing-lab-lch
-     auto [c1, c2, c3, alpha] = color.unresolved();
-     if (WTF::areEssentiallyEqual(alpha, 1.0f))
-         return makeString(serialization(ColorSpaceFor<ColorType>), '(', numericComponent(c1), ' ', numericComponent(c2), ' ', numericComponent(c3), ')');
-     return makeString(serialization(ColorSpaceFor<ColorType>), '(', numericComponent(c1), ' ', numericComponent(c2), ' ', numericComponent(c3), " / ", numericComponent(alpha), ')');
- }
+    // https://www.w3.org/TR/css-color-4/#serializing-lab-lch
+    auto [c1, c2, c3, alpha] = color.unresolved();
+    if (WTF::areEssentiallyEqual(alpha, 1.0f))
+        return makeString(serialization(ColorSpaceFor<ColorType>), '(', numericComponent(c1), ' ', numericComponent(c2), ' ', numericComponent(c3), ')');
+    return makeString(serialization(ColorSpaceFor<ColorType>), '(', numericComponent(c1), ' ', numericComponent(c2), ' ', numericComponent(c3), " / ", numericComponent(alpha), ')');
+}
+
+template<typename ColorType> static String serializationOfLCHLikeColorsForCSS(const ColorType& color)
+{
+    static_assert(std::is_same_v<typename ColorType::ComponentType, float>);
+
+    // https://www.w3.org/TR/css-color-4/#serializing-lab-lch
+
+    // NOTE: It is unclear whether normalizing the hue component for serialization is required. The question has been
+    // raised with the editors as https://github.com/w3c/csswg-drafts/issues/7782.
+
+    auto [c1, c2, c3, alpha] = color.unresolved();
+    if (WTF::areEssentiallyEqual(alpha, 1.0f))
+        return makeString(serialization(ColorSpaceFor<ColorType>), '(', numericComponent(c1), ' ', numericComponent(c2), ' ', numericComponent(normalizeHue(c3)), ')');
+    return makeString(serialization(ColorSpaceFor<ColorType>), '(', numericComponent(c1), ' ', numericComponent(c2), ' ', numericComponent(normalizeHue(c3)), " / ", numericComponent(alpha), ')');
+}
 
 // MARK: A98RGB<float> overloads
 
@@ -422,7 +438,7 @@ String serializationForRenderTreeAsText(const HWBA<float>& color, bool useColorF
 
 String serializationForCSS(const LCHA<float>& color, bool)
 {
-    return serializationOfLabFamilyForCSS(color);
+    return serializationOfLCHLikeColorsForCSS(color);
 }
 
 String serializationForHTML(const LCHA<float>& color, bool useColorFunctionSerialization)
@@ -439,7 +455,7 @@ String serializationForRenderTreeAsText(const LCHA<float>& color, bool useColorF
 
 String serializationForCSS(const Lab<float>& color, bool)
 {
-    return serializationOfLabFamilyForCSS(color);
+    return serializationOfLabLikeColorsForCSS(color);
 }
 
 String serializationForHTML(const Lab<float>& color, bool useColorFunctionSerialization)
@@ -473,7 +489,7 @@ String serializationForRenderTreeAsText(const LinearSRGBA<float>& color, bool)
 
 String serializationForCSS(const OKLCHA<float>& color, bool)
 {
-    return serializationOfLabFamilyForCSS(color);
+    return serializationOfLCHLikeColorsForCSS(color);
 }
 
 String serializationForHTML(const OKLCHA<float>& color, bool useColorFunctionSerialization)
@@ -490,7 +506,7 @@ String serializationForRenderTreeAsText(const OKLCHA<float>& color, bool useColo
 
 String serializationForCSS(const OKLab<float>& color, bool)
 {
-    return serializationOfLabFamilyForCSS(color);
+    return serializationOfLabLikeColorsForCSS(color);
 }
 
 String serializationForHTML(const OKLab<float>& color, bool useColorFunctionSerialization)
